--- a/cm-server.conf
+++ b/cm-server.conf
@@ -13,7 +13,7 @@ COMM_ARCH	CM_CS
 # If SERVER_ADDR == my address && SERVER_PORT == MY_PORT,
 # this server is the default CM server.
 #SERVER_ADDR	localhost
-SERVER_ADDR	192.168.56.1
+SERVER_ADDR	172.18.64.1
 SERVER_PORT	7777
 
 # my configuration (this server)
@@ -53,7 +53,7 @@ PERMIT_FILE_TRANSFER	0
 # login scheme (1 or 0)
 # 1: application is responsible for user authentication
 # 0: no authentication
-LOGIN_SCHEME	0
+LOGIN_SCHEME	1
 
 # maximum login failure that is allowed
 MAX_LOGIN_FAILURE	5
@@ -73,12 +73,12 @@ SESSION_SCHEME	0
 # DB usage (1 or 0)
 # 1: use DB (MySQL) internally for user registration and content management
 # 0: do not use DB
-DB_USE		0
+DB_USE		1
 DB_HOST		localhost
-DB_USER		test
-DB_PASS		test
+DB_USER		admin
+DB_PASS		1234
 DB_PORT		3306
-DB_NAME		cmdb
+DB_NAME		nklcbdtalk
 
 ########## CM SNS parameters
 
