Update ide configuration & cm configuration

--- a/cm-server.conf
+++ b/cm-server.conf
@@ -7,13 +7,13 @@ SYS_TYPE	SERVER
 # communication architecture (CM_CS/CM_PS)
 # CM_CS: client-server model
 # CM_PS: peer-server model
-COMM_ARCH	CM_CS
+COMM_ARCH	CM_PS
 
 # default server configuration
 # If SERVER_ADDR == my address && SERVER_PORT == MY_PORT,
 # this server is the default CM server.
 #SERVER_ADDR	localhost
-SERVER_ADDR	172.18.64.1
+SERVER_ADDR	172.31.128.1
 SERVER_PORT	7777
 
 # my configuration (this server)
