--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,16 @@ repositories {
     mavenCentral()
 }
 
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile fileTree(dir: 'libs', include: ["*.jar"])
+    implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.2-rc1'
 }
 
 test {
