Chore: Make client.jar server.jar

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,10 +25,16 @@ jobs:
 
       - name: Build with Gradle
         id: build_gradle
-        run: ./gradlew build
+        run: ./gradlew build -x jar
 
-      - name: Make Batch File
-        run: echo 'java -jar "%~dp0app.jar"' > build/libs/app.bat
+      - name: Make Jar
+        run: ./gradlew clientJar serverJar
+
+      - name: Make Client Batch File
+        run: echo 'java -jar "%~dp0client.jar"' > build/libs/client.bat
+
+      - name: Make Server Batch File
+        run: echo 'java -jar "%~dp0server.jar"' > build/libs/client.bat
 
       - name: Deploy Excutable JAR
         uses: actions/upload-artifact@v2
