--- a/build.gradle
+++ b/build.gradle
@@ -18,33 +18,18 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile fileTree(dir: 'libs', include: ["*.jar"])
-    implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.2-rc1'
+    compile 'io.github.vincenzopalazzo:material-ui-swing:1.1.2-rc1'
 }
 
 test {
     useJUnitPlatform()
 }
 
-jar.enabled = false
-
-task clientJar(type: Jar) {
+jar {
     manifest {
-        attributes 'Title': 'app-client-result', 'Version': '0.1.0', 'Main-Class': 'app/AppClient'
+        attributes 'Title': 'app-result', 'Version': '0.1.0'
     }
-    archiveName 'client.jar'
-    dependsOn configurations.runtime
-    from {
-        configurations.compile.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-}
-
-task serverJar(type: Jar) {
-    manifest {
-        attributes 'Title': 'app-server-result', 'Version': '0.1.0', 'Main-Class': 'app/AppServer'
-    }
-    archiveName 'server.jar'
+    archiveName 'app.jar'
     dependsOn configurations.runtime
     from {
         configurations.compile.collect {
