--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile fileTree(dir: 'libs', include: ["*.jar"])
-    compile 'io.github.vincenzopalazzo:material-ui-swing:1.1.2-rc1'
+    implementation "com.github.weisj:darklaf-core:2.5.5"
 }
 
 test {
