--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,11 @@ jar {
         attributes 'Title': 'app-result', 'Version': '0.1.0'
     }
     archiveName 'app.jar'
-    dependsOn configurations.runtime
     from {
         configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+        configurations.runtimeClasspath.collect {
             it.isDirectory() ? it : zipTree(it)
         }
     }
