--- a/cm-client.conf
+++ b/cm-client.conf
@@ -5,7 +5,7 @@
 SYS_TYPE	CLIENT
 
 # default server configuration
-SERVER_ADDR	172.23.144.1
+SERVER_ADDR	localhost
 SERVER_PORT	7777
 
 # default udp configuration
